General | Ahora nuevo uso de en los @Bean de las configuraciónes de seguridad (en vez de List.of() ahora usamos el Arrays.asList())